added nglview for hemoglobin

--- a/quantitative_biochemistry/Lecture-00-Hemoglobin.ipynb
+++ b/quantitative_biochemistry/Lecture-00-Hemoglobin.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 14,
    "id": "f2dd3f8b-32e8-4b5c-889d-421cc9b7fda1",
    "metadata": {
     "tags": []
@@ -12,6 +12,7 @@
     "import numpy, math\n",
     "from matplotlib import pyplot as plt\n",
     "from matplotlib import patches\n",
+    "import nglview\n",
     "from src import code_toggle\n",
     "%matplotlib inline"
    ]
@@ -31,24 +32,50 @@
   },
   {
    "cell_type": "markdown",
-   "id": "acb9250a",
-   "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
    "id": "b6a93948-da9c-4087-b6f2-ae17ec9122e4",
    "metadata": {},
    "source": [
-    "# Hemoglobin"
+    "# Hemoglobin\n",
+    "\n",
+    "\n",
+    "Frier, J.A., Perutz, M.F. (1977) Structure of human foetal deoxyhaemoglobin. J Mol Biol 112: 97-112\n",
+    "\n",
+    "PDB:1FDH"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "55a162fd-b4a2-4e51-924f-6cb7ac47f87b",
+   "id": "57ec04d2",
    "metadata": {},
    "source": [
     "![Hb](images/41-Hemoglobin-2dhb-small.png)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "cc96da25",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "41677811fa7b4237a3770ec2b8cc9490",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "NGLWidget()"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "view = nglview.show_pdbid(\"1fdh\")\n",
+    "view.camera = 'orthographic'\n",
+    "view"
    ]
   },
   {
@@ -224,6 +251,14 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f3f7a9d4",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "id": "f234fdd6-73cc-4d18-af75-c9161a87d298",
    "metadata": {},
@@ -246,7 +281,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3.10.4 64-bit",
    "language": "python",
    "name": "python3"
   },
@@ -260,7 +295,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.12"
+   "version": "3.10.4"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "7a792fcb311f9eb9f3c1b942a8c87ada8484712b89b670347c16a1088e0a1f69"
+   }
   }
  },
  "nbformat": 4,
