--- a/quantitative_biochemistry/Lecture-00-Hemoglobin.ipynb
+++ b/quantitative_biochemistry/Lecture-00-Hemoglobin.ipynb
@@ -2,12 +2,25 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 1,
    "id": "f2dd3f8b-32e8-4b5c-889d-421cc9b7fda1",
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "1506bb1c1bbf46678ae5a55c79d44ac6",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": []
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "import numpy, math\n",
     "from matplotlib import pyplot as plt\n",
@@ -37,30 +50,30 @@
    "source": [
     "# Hemoglobin\n",
     "\n",
+    "Already heard from Mark Wormald how one can infer the 3-dimensional structure of a protein from the diffraction pattern arising from shining X-rays on a protein crystal.\n",
+    "\n",
+    "That requires a lot of mathematics that we aren't going to talk about today (not least Fourier transforms which require integration, exponential functions and complex numbers).\n",
+    "\n",
+    "Instead we are going to look at how mathematics can help us understand the kinetics and binding of oxygen to hemoglobin.\n",
+    "\n",
+    "Let's look at a structure:\n",
     "\n",
     "Frier, J.A., Perutz, M.F. (1977) Structure of human foetal deoxyhaemoglobin. J Mol Biol 112: 97-112\n",
     "\n",
-    "PDB:1FDH"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "57ec04d2",
-   "metadata": {},
-   "source": [
-    "![Hb](images/41-Hemoglobin-2dhb-small.png)"
+    "PDB:1FDH\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 2,
    "id": "cc96da25",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "41677811fa7b4237a3770ec2b8cc9490",
+       "model_id": "7604f9815b704206b53d0c2586198ea4",
        "version_major": 2,
        "version_minor": 0
       },
@@ -73,6 +86,8 @@
     }
    ],
    "source": [
+    "# ![Hb](images/41-Hemoglobin-2dhb-small.png)\n",
+    "\n",
     "view = nglview.show_pdbid(\"1fdh\")\n",
     "view.camera = 'orthographic'\n",
     "view"
